[gd_scene load_steps=5 format=3 uid="uid://1ga6baq7r5ns"]

[ext_resource type="Script" path="res://scenes/weapons/bullet_shooter/bullet.gd" id="1_217hl"]
[ext_resource type="PackedScene" uid="uid://cpjd6wycna3t4" path="res://scenes/component/hitbox_component.tscn" id="2_suqem"]
[ext_resource type="Texture2D" uid="uid://c7aehe1dgyooy" path="res://scenes/weapons/bullet_shooter/bullet.png" id="3_wf7cq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ylb1"]
radius = 14.0
height = 42.0

[node name="DefaultBullet" type="Node2D"]
script = ExtResource("1_217hl")

[node name="HitboxComponent" parent="." instance=ExtResource("2_suqem")]
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitboxComponent"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2ylb1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_wf7cq")

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
